# FocusTimer

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/aw32001/: CMakeLists.txt  aw32001.c
components/aw96103/: CMakeLists.txt  aw96103.c
components/battery/: CMakeLists.txt  battery.c  idf_component.yml
components/imu/: CMakeLists.txt  imu.c
components/lvgl_indev/: CMakeLists.txt  idf_component.yml  lvgl_indev.c
components/lvgl_user/: CMakeLists.txt  lvgl_user.c
components/max98357/: CMakeLists.txt  max98357.c  max98357_component.c
components/pcf85263a/: CMakeLists.txt  pcf85263a.c
components/pinmap/: pinmap.h
components/sdspi/: CMakeLists.txt  sdspi.c  sdspi_component.c
components/st7305_2p9/: CMakeLists.txt  (+1 more)
docs/: audio_partition.md
main/: CMakeLists.txt  main.c  sys_init.c
main/include/: sys_init.h
main/ui/: .eez-project-build  actions.c  actions.h  eez-flow.cpp  eez-flow.h  fonts.h  images.h  main_screen_calls.c  main_screen_calls.h  message_screen_calls.c  message_screen_calls.h  mp3_screen_calls.c  mp3_screen_calls.h  pomodoro_screen_calls.c  pomodoro_screen_calls.h  screens.c  screens.h  setting_screen_calls.c  setting_screen_calls.h  styles.c  styles.h  ui.c  ui.h  ui_font_custom_symbol_fa_pro_regular_16.c  ui_font_custom_symbol_fa_pro_regular_26.c  ui_font_custom_symbol_solid_26.c  ui_font_dyna_puff_medium.c  ui_font_roboto.c  ui_font_roboto_condensed_3_100.c  ui_font_roboto_condensed_3_40.c  ui_font_siyuanheiti.c  ui_font_siyuanheiti_16.c  ui_font_siyuanheiti_20.c
tools/: wav_to_partition_bin.py
(+16 files in other folders)
